# edgefit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  action.yml  requirements-onnx.txt
.github/workflows/: alpha-evidence.yml  ci.yml  espdl-qemu-evidence.yml  maturity-evidence.yml  optimizer-evidence.yml  release-acceptance.yml  release-smoke.yml  release.yml
crates/edgefit-analyze/: Cargo.toml
crates/edgefit-analyze/src/: lib.rs  memory_plan.rs
crates/edgefit-calibration/: Cargo.toml
crates/edgefit-calibration/src/: capture.rs  hash.rs  json.rs  lib.rs  render.rs  schema.rs  simulation.rs  verify.rs
crates/edgefit-calibration/tests/: calibration.rs
crates/edgefit-cli/: Cargo.toml
crates/edgefit-cli/src/: calibration.rs  main.rs
crates/edgefit-cli/tests/: cli.rs
crates/edgefit-core/: Cargo.toml
crates/edgefit-core/src/: calibration.rs  lib.rs  optimization_matrix.rs
crates/edgefit-diff/: Cargo.toml
crates/edgefit-ir/: Cargo.toml
crates/edgefit-optimize/: Cargo.toml
crates/edgefit-policy/: Cargo.toml
crates/edgefit-policy/src/: lib.rs
crates/edgefit-report/: Cargo.toml
crates/edgefit-report/src/: lib.rs
crates/edgefit-target/: Cargo.toml
docs/: ARCHITECTURE.md  CLI_CONTRACT.md  COMPETITIVE_BENCHMARK.md  DIAGNOSTIC_POLICY.md  GITHUB_ACTION_USAGE.md  HARDWARE_OPTIMIZER.md  MVP_SCOPE.md  PUBLISHING.md  PYTHON_API.md  REAL_WORLD_CORPUS.md  SIMULATED_DEPLOYMENT.md  TARGET_PROFILES.md
examples/: public_pr_trials.example.json
examples/calibration/: arena-fail.simulation.json  external-capture.example.json  latency-fail.simulation.json  nominal.simulation.json
examples/models/: bad_detector.edgefit.json  good_tiny.edgefit.json  rank_dynamic.edgefit.json  virtual_npu_segmented.edgefit.json  virtual_npu_spill.edgefit.json  virtual_npu_tiny.edgefit.json
examples/optimizer/: virtual-npu-profile-matrix.json
python/: pyproject.toml
python/edgefit/: __init__.py  __main__.py  framework.py  onnx_adapter.py
python/native/: Cargo.toml
python/native/src/: lib.rs
python/tests/: test_framework.py
targets/: esp32s3.yaml  ort-mobile-cpu.yaml  tflm-micro.yaml  virtual-npu-no-spill.yaml  virtual-npu-segmented.yaml  virtual-npu-small-scratchpad.yaml  virtual-npu.yaml
tools/: calibration_contract_gate.py  demo_pr_trials.py  low_disk_verify.ps1  public_pr_trial_gate.py  test_public_pr_trial_gate.py
tools/competitive-benchmark/: alpha_case_manifest.json  benchmark.py  benchmark_manifest.json  optimizer_evidence_manifest.json  planner_scale_manifest.json  requirements.txt  test_benchmark.py
tools/espdl-qemu/: run_evidence.sh
tools/espdl-qemu/firmware/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
tools/onnx-normalize/: README.md  corpus_expansion_gate.py  diagnostic_policy.json  normalize_onnx.py  operator_fixture_corpus.py  operator_fixtures.json  operator_support_audit.py  operator_support_labels.json  ort_runtime_boundary.py  ort_runtime_evidence.json  ort_runtime_evidence.py  profile_confidence_gate.py  profile_matrix.py  profile_reference_check.py  real_world_corpus.json  real_world_corpus.py  requirements-runtime.txt  requirements.txt  runtime_smoke.py  test_corpus_expansion_gate.py  test_normalize_onnx.py  test_operator_fixture_corpus.py  test_operator_support_audit.py  test_ort_runtime_boundary.py  test_profile_confidence_gate.py  test_profile_matrix.py  test_profile_reference_check.py  test_quantized_onnx.py  test_real_world_corpus.py  test_runtime_smoke.py  test_toy_ops.py
(+8 files in other folders)
