[workspace]
members = [
  "crates/edgefit-analyze",
  "crates/edgefit-cli",
  "crates/edgefit-core",
  "crates/edgefit-diff",
  "crates/edgefit-ir",
  "crates/edgefit-policy",
  "crates/edgefit-report",
  "crates/edgefit-target",
]
resolver = "2"

[workspace.package]
version = "0.2.0-alpha.3"
edition = "2021"
license = "MIT"
authors = ["EdgeFit contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
