[workspace]
members = [
  "crates/edgefit-analyze",
  "crates/edgefit-calibration",
  "crates/edgefit-cli",
  "crates/edgefit-core",
  "crates/edgefit-diff",
  "crates/edgefit-ir",
  "crates/edgefit-optimize",
  "crates/edgefit-policy",
  "crates/edgefit-report",
  "crates/edgefit-target",
]
exclude = ["python/native"]
resolver = "2"

[workspace.package]
version = "0.5.0-alpha.1"
edition = "2021"
license = "MIT"
authors = ["EdgeFit contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
