[package]
name = "edgefit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "edgefit"
path = "src/main.rs"

[dependencies]
edgefit-calibration = { path = "../edgefit-calibration" }
edgefit-core = { path = "../edgefit-core" }
edgefit-diff = { path = "../edgefit-diff" }
edgefit-ir = { path = "../edgefit-ir" }
edgefit-optimize = { path = "../edgefit-optimize" }
edgefit-report = { path = "../edgefit-report" }
edgefit-target = { path = "../edgefit-target" }
