[package]
name = "edgefit-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
edgefit-analyze = { path = "../edgefit-analyze" }
edgefit-ir = { path = "../edgefit-ir" }
edgefit-target = { path = "../edgefit-target" }

[lib]
path = "src/lib.rs"
